--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .top-bg{
-    background-image: url(/imgs/bg-pic.jpg);
+    background-image: url(imgs/bg-pic.jpg);
     width: 100%;
     height: 600px;
     background-repeat: no-repeat;
