--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     background-position: center;
     filter: blur(2px);
     background-color: #0e0d0db9;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
   
 }
 .heading-title{
@@ -44,19 +44,30 @@ h1{
 section{
     width: 100%;
     height: 550px;
-    margin-bottom: 100px;
+    margin-bottom: 70px;
     display: flex;
 }
 
 .half-div{
     Margin-left:1% ;
     padding: 8%;
+    padding-left: 10%;
     width: 40%;
-    border: 2px solid red;
 }
+
 .half-div h1{
     color: black;
     font-size: 40px;
     font-weight: bold;
-    
+}
+.videos{
+    width: 40%;
+    position: absolute;
+    top: 620px;
+    left: 50%;
+    height: 550px;
+}
+img{
+    width: 100%; 
+    padding-left: 10%;
 }
