--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
     left: 15%;
     position: absolute;   
 }
-h1{
+.heading-title h1{
     font-size: 50px;
     color: white;
     font-weight: bold;
@@ -53,6 +53,7 @@ section{
     padding: 8%;
     padding-left: 10%;
     width: 40%;
+    
 }
 
 .half-div h1{
@@ -68,6 +69,17 @@ section{
     height: 550px;
 }
 img{
-    width: 100%; 
-    padding-left: 10%;
+    width: 100%;
+    padding-left: 10%; 
+    
+}
+.donation-declation{
+    width: 100%;
+    height:200px;
+}
+.text-align{
+    color: black;
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
 }
