--- a/style.css
+++ b/style.css
@@ -98,14 +98,14 @@ img{
 }
 .donation-area{
     display: flex;
+    
     margin-top: 40px;
-    padding-left: 15%;
+    
     
 }
 .icon-area{
-    
-    width: 30%;
-    margin-left: 3%;
+    margin: auto;  
+    width: 30%;  
     background-color: #FEF4F5;
     border-radius: 10px;
 }
