--- a/style.css
+++ b/style.css
@@ -79,37 +79,45 @@ img{
     height:200px;
 }
 .text-align{
+    margin-bottom: 40px;
     color: black;
     text-align: center;
     padding-left: 20%;
     padding-right: 20%;
 }
+
 .donation-area{
+    
+    display: flex;
     width: 100%;
     margin: 0;
-    height: 250px;
-    
+    height: 250px;    
 }
-.icon{
-    margin-top: 20px;
-    width: 50px;
-    height: 50px;
 
-}
-.donation-area{
-    display: flex;
-    
-    margin-top: 40px;
-    
-    
-}
 .icon-area{
-    margin: auto;  
+    height: 200px;
+    display: flex;
+    margin-left: 13%; 
     width: 30%;  
     background-color: #FEF4F5;
     border-radius: 10px;
 }
-.icon-area h3,p{
-   
-  
+.icon {
+    padding-top: 30px;
+    width: 50px;
+    height: 50px;
+    
+
 }
+.title{
+    font-size: 20px;
+    font-weight: bold;
+}
+.donation-paragraph{
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+    
+    
+    
