--- a/style.css
+++ b/style.css
@@ -137,6 +137,44 @@ img{
 .color{
     color: red;
 }
+.shadow{
+    box-shadow: 0 0 10px;
+}
+.donate-section{
+    height: 500px;
+    display: flex;
+}
+.zakat-fund{
+    background-image: url(imgs/Rectangle\ 252.png);
+    background-repeat: no-repeat;
+    width:25%;
+    margin-left: 5%;
+    padding-left: 2%;
+    box-shadow: 0 0 2px;
+    border-radius: 10px;
+    
+}
+.text-donation{
+    display: block;
+    margin-top: 250px; 
+}
+.red-color{
+    color:red;
+}
+footer{
+    width: 100%;
+    height: 250px;
+    background-color: #0B0D17;
+    text-align: center;
+}
+#color-red{
+    padding-top: 60px;
+    color: red;
+}
+#color-white{
+    color: white;
+}
+
     
     
     
