--- a/style.css
+++ b/style.css
@@ -6,33 +6,25 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .top-bg{
+    display: flext;
     background-image: url(imgs/bg-pic.jpg);
     width: 100%;
-    height: 600px;
+    height: 650px;
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center;
-    filter: blur(2px);
-    background-color: #0e0d0db9;
-    margin-bottom: 50px;
-  
 }
 .heading-title{
+    margin-top: 120px;
+    padding-left:15%;
     width: 40%;
-    top: 15%;
-    left: 15%;
-    position: absolute;   
+    color: white;
 }
+
 .heading-title h1{
-    font-size: 50px;
+    font-size: 60px;
     color: white;
     font-weight: bold;
-}
-#title-paragraph{
-    color: white;
-    text-align: justify;
-    font-size: 16px;
-    padding-left: -20px;
 }
 .donate-button{
     text-decoration: none;
